--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "line-today-clone",
+  "name": "line_today_clone",
   "version": "1.0.0",
   "description": "[![Open in Visual Studio Code](https://classroom.github.com/assets/open-in-vscode-2e0aaae1b6195c2367325f4f02e2d04e9abb55f0b24a779b69b11b9e10269abc.svg)](https://classroom.github.com/online_ide?assignment_repo_id=15443048&assignment_repo_type=AssignmentRepo)\r # P2-Challenge-1 (Server Side)",
   "main": "index.js",
   "scripts": {
-    "test": "jest --detectOpenHandles --forceExit --verbose",
-    "start": "node bin/www", 
-    "dev": "nodemon bin/www"  
+    "start": "node bin/www",  
+    "test": "jest --detectOpenHandles --forceExit --verbose"
   },
   "keywords": [],
   "author": "",
@@ -28,8 +27,5 @@
     "nodemon": "^3.1.4",
     "sequelize-cli": "^6.6.2",
     "supertest": "^7.0.0"
-  },
-  "engines": {
-    "node": "17.0"  
-}
+  }
 }
